fix(page header) align text to bottom

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -59,6 +59,7 @@
 @text-medium-m: 20px;
 @text-medium-s: 16px;
 // font weight
+@font-weight-light: 200;
 @font-weight-normal: 500;
 @font-weight-bold: 700;
 @font-weight-bold-extra: 900;
